--- a/Joch/index.html
+++ b/Joch/index.html
@@ -10,20 +10,23 @@
        <meta name="description" content="JoCh Analytics and Consult: Do not think alone. Data analysis, policy insights, and more in Ghana." />
      </head>
      <body class="bg-slate-50 text-slate-800" style="font-family: Inter, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, sans-serif;">
-       <!-- Header -->
        <header class="sticky top-0 z-40 bg-white/80 backdrop-blur shadow-sm">
-         <div class="max-w-6xl mx-auto px-4 py-3 flex items-center justify-between">
-           <a href="#home" class="font-extrabold tracking-tight text-xl">JoCh <span class="text-teal-700">Analytics and Consult</span></a>
-           <nav class="hidden md:flex gap-6 text-sm">
-             <a href="#services" class="hover:text-teal-600">Services</a>
-             <a href="#who-we-serve" class="hover:text-teal-600">Who We Serve</a>
-             <a href="articles.html" class="hover:text-teal-600">Articles</a>
-             <a href="about.html" class="hover:text-teal-600">About</a>
-             <a href="#contact" class="hover:text-teal-600">Contact</a>
-           </nav>
-           <a href="#contact" class="ml-3 inline-flex items-center rounded-xl px-4 py-2 text-sm font-semibold bg-teal-600 text-white hover:bg-teal-700" aria-label="Get a Quote">Get a Quote</a>
-         </div>
-       </header>
+  <div class="max-w-6xl mx-auto px-4 py-3 flex items-center justify-between">
+    <a href="#home" class="flex items-center">
+      <img src="assets/images/main_logo.jpg" alt="JoCh Analytics and Consult Logo" class="h-40 w-auto"> <!-- Increased from h-28 to h-40 -->
+    </a>
+    <nav class="hidden md:flex gap-6 text-sm" aria-label="Main navigation">
+      <a href="#services" class="hover:text-teal-600">Services</a>
+      <a href="#who-we-serve" class="hover:text-teal-600">Who We Serve</a>
+      <a href="articles.html" class="hover:text-teal-600">Articles</a>
+      <a href="about.html" class="hover:text-teal-600">About</a>
+      <a href="#contact" class="hover:text-teal-600">Contact</a>
+    </nav>
+    <a href="#contact" class="ml-3 inline-flex items-center rounded-xl px-4 py-2 text-sm font-semibold bg-teal-600 text-white hover:bg-teal-700 transition-colors" aria-label="Get a Quote">
+      Get a Quote
+    </a>
+  </div>
+</header>
 
        <!-- Hero -->
        <section id="home" class="relative overflow-hidden">
